all feature complete.

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -22,3 +22,81 @@
 .Select{
   width: 100%;
 }
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+.tab_section_row{
+  background-color: white;
+  border-style: solid;
+  border-color: black;
+}
+
+.image {
+  height: 100px;
+  weight: 100px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://static1.squarespace.com/static/56f0b74686db4386c7f60808/56f1e3362fe1310caacd02e0/56f2044040261ddb87701731/1465481892082/What+We+Do+-+Events.jpg');
+}
+.bigger_image {
+  height: 200px;
+  weight: 200px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://static1.squarespace.com/static/56f0b74686db4386c7f60808/56f1e3362fe1310caacd02e0/56f2044040261ddb87701731/1465481892082/What+We+Do+-+Events.jpg');
+}
+
+.color_blue{
+  color: blue;
+}
+
+.row{
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
+.ad_h5{
+  margin: 0 auto;
+  text-align: center;
+  color: blue;
+}
+
+.nostyle{
+  list-style: none;
+}
+
+.display_block{
+  width: 200px;
+  display: block;
+}
